# marty-public

./: .clang-format  .copilot_metrics_report.md  .directory  .gitignore  .setup_script.sh  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CodeCoverage.cmake  Makefile  README.md  RELEASE.md  configure.sh  marty_env.sh  pymarty-conda-env.yml  setup.sh
doc/: .gitignore  CMakeLists.txt  README.md  dox-config  header.html  style.css
doc/common/: footer.html
doc/csl/: CMakeLists.txt  Doxyfile  Doxyfile.in  csl.tag
doc/marty/: CMakeLists.txt  dox-config  dox-config.in
examples/: CMakeLists.txt  gettingStarted.cpp  sample2HDM.cpp  sampleElectroWeak.cpp  sampleGammaAPI.cpp  samplePMSSM.cpp  sampleQCD.cpp  sampleQCDSextet.cpp  sampleQED.cpp  sampleSQED.cpp  sampleScalar.cpp
grafed/gui/: CMakeLists.txt  latexLink.cpp  mainwidget.h  mainwindow.h  pdfoption.h  pdfsetupdialog.h
python/: .gitignore  CMakeLists.txt  Pytest.cmake  README.md  pyproject.toml  setup.cfg
python/notebooks/: sample_gamma_api.ipynb
python/src/pymarty/: __init__.py  __init__.pyi
python/tests/: conftest.py  conftest.py.in  test_import.py  test_objects.py  test_simple_api.py  test_simplifications.py
src/csl/: CMakeLists.txt  abreviation.cpp  abreviation.h  abstract.cpp  abstract.h  algo.cpp  algo.h  alloc_monitor.h  allocator.h  alternateForms.cpp  booleanOperators.cpp  booleanOperators.h  buildingBlock.cpp  buildingBlock.h  cast.h  commutation.cpp  commutation.h  comparison.cpp  comparison.h  conditional.h  counter.h  csl  csl.h  cslcomplex.cpp  cslcomplex.h  default_move_cpy.h  diagonalization.cpp  diagonalization.h  dichotomy.h  element.cpp  element.h  enum.cpp  enum.h  equation.cpp  equation.h  error.cpp  error.h  evaluation.cpp  evaluation.h  field.cpp  (+109 more)
src/doc/: CMakeLists.txt
src/doc/common/: style_extra.css
src/doc/csl/: CMakeLists.txt
src/grafed/core/: CMakeLists.txt  adjacencyMatrix.h  latexLink.cpp  latexLink.h  planargraph.h
src/grafed/gui/: CMakeLists.txt  adjacencyMatrix.h  border.h  curvature.cpp  curvature.h  diagram.cpp  diagram.h  diagramrenderer.cpp  diagramrenderer.h  diagramrenderer.ui  diagramwidget.cpp  diagramwidget.h  dialoglatex.cpp  dialoglatex.h  edge.cpp  edge.h  edgeform.cpp  edgeform.h  grid.cpp  grid.h  htmlconverter.cpp  htmlconverter.h  jsonLoader.cpp  jsonLoader.h  latexLink.cpp  latexLink.h  latexcompiler.cpp  latexcompiler.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  node.cpp  node.h  nodeform.cpp  nodeform.h  nodeform.ui  pdfoption.h  pdfsetupdialog.cpp  (+7 more)
src/marty/: CMakeLists.txt  marty
src/marty-plugins/boltzmann-solver/: CMakeLists.txt  libjsondata.cpp  libjsondata.h  processdata.cpp  processdata.h  quantumnumberdata.cpp  quantumnumberdata.h
src/marty/api/: CMakeLists.txt  gamma.cpp  gamma.h  gamma_api_error.h
src/marty/core/: 2HDM.cpp  2HDM.h  CKM.cpp  CKM.h  CMakeLists.txt  GTHDM.h  MSSM.cpp  MSSM.h  MSSMData.h  NMFV.h  PMSSM.cpp  PMSSM.h  QCD.cpp  QCD.h  QED.cpp  QED.h  SM.cpp  SM.h  SU_N_algebra.cpp  SU_N_algebra.h  algebra.h  algebraState.cpp  algebraState.h  amplitude.cpp  amplitude.h  amplitudeInitializer.cpp  amplitudeInitializer.h  amplitudeSimplification.cpp  amplitudeSimplification.h  bernoulli.h  builtinOperators.cpp  builtinOperators.h  cache.h  callback.h  checkpoint.h  ckm.cpp  ckm.h  colorSimplification.cpp  colorSimplification.h  colorSpace.cpp  (+144 more)
src/marty/lha/: CMakeLists.txt  lha.cpp  lha.h  lhaData.cpp  lhaData.h
src/marty/models/: 2HDM.h  CMakeLists.txt  GTHDM.cpp  GTHDM.h  MSSM.cpp  MSSM.h  NMFV.cpp  PMSSM.cpp  PMSSM.h  QCD.cpp  QED.cpp  QED.h  SM.cpp  gthdm.cpp  gthdm.h  mssm.cpp  mssm.h  mssmData.h  nmfv.cpp  nmfv.h  pmssm.cpp  pmssm.h  pmssm_lem.h  qcd.cpp  qcd.h  qed.cpp  sm.cpp  sm.h  thdm.cpp  thdm.h
src/marty/scripts/: samplePMSSM.cpp  sampleScalar.cpp
src/marty/sgl/: CMakeLists.txt  abstractgammasym.cpp  abstractgammasym.h  contraction.cpp  contraction.h  cslconverter.cpp  cslconverter.h  cslexpr.cpp  cslexpr.h  debuglog.h  epsilonindex.cpp  epsilonindex.h  exceptions.h  fierz.cpp  fierz.h  gammaindex.cpp  gammaindex.h  generalizedindex.cpp  generalizedindex.h  indexchain.cpp  indexchain.h  metricindex.cpp  metricindex.h  momentumindex.cpp  momentumindex.h  multifunction.cpp  multifunction.h  ordering.cpp  ordering.h  sgl.h  sglalgo.h  sglcommutation.cpp  sglcommutation.h  sglfield.cpp  sglfield.h  sglinterface.cpp  sglinterface.h  sgloperations.cpp  sgloperations.h  sgloptions.h  (+7 more)
src/marty/ufo/: CMakeLists.txt  charge.h  colorcoupling.h  diracmatrix.h  electriccharge.cpp  electriccharge.h  field.h  lorentzcoupling.h  marty-ufo.h  model_sqed.cpp  model_sqed.h  parsefactors.cpp  parsefactors.h  simplifiedvertex.cpp  simplifiedvertex.h  ufosmdata.h  vertexinfo.h
src/plugins/boltzmann_solver/: CMakeLists.txt  libjsondata.h  processdata.cpp
src/pybinding/: CMakeLists.txt  gamma_api.cpp  pymartyc.cpp
tests/: CMakeLists.txt  CodeCoverage.cmake
tests/integration/: CMakeLists.txt
tests/integration/src/: gammaAPI.cpp  test_diagonalization.cpp  test_flavor_groups.cpp  test_specific_gauge_couplings.cpp
tests/pymarty/: __init__.py  pymarty.pyi  test_simple_py.py
tests/system/: CMakeLists.txt  README.md
tests/system/libsrc/: C7_SM.cpp  C8_SM.cpp  ckm.cpp  ckm.h  example_bsmixingsm.cpp  example_bsmixingvlq_10_11.cpp  example_bsmixingvlq_5_6.cpp  example_bsmixingvlq_7_8.cpp  example_bsmixingvlq_9_10.cpp  example_c7_pmssm.cpp  example_c7_sm.cpp  example_c8_pmssm.cpp  example_c8_sm.cpp  example_c9_mssm.cpp  example_c9_sm.cpp  example_c9bis_mssm.cpp  example_ewgauge.cpp  example_gg_to_tt.cpp  example_gm2_sm.cpp  example_gm2pmssm.cpp  example_modelwidthlib.cpp  example_simplespectrum.cpp  example_thdm_paper.cpp  example_widths_hWW.cpp  example_widths_lib.cpp  example_zmumu.cpp  kinematics.h  lha.cpp  lhaData.cpp  lhaData.h  plot_gg_h.cpp  plot_gthdm.py  read_spectrum.h
tests/system/models/: Makefile
tests/system/src/: Bgenesis.cpp  BsMixingSM.cpp  BsMixingVLQ_10_11.cpp  BsMixingVLQ_5_6.cpp  BsMixingVLQ_7_8.cpp  BsMixingVLQ_9_10.cpp  C1_SM.cpp  C7_PMSSM.cpp  (+36 more)
tests/units/: CMakeLists.txt
(+6587 files in other folders)
