include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src/marty/core)
add_executable(gettingStarted.x gettingStarted.cpp)
target_link_libraries(gettingStarted.x marty grafed csl)
add_executable(sample2HDM.x sample2HDM.cpp)
target_link_libraries(sample2HDM.x marty grafed csl)
add_executable(sampleElectroWeak.x sampleElectroWeak.cpp)
target_link_libraries(sampleElectroWeak.x marty grafed csl)
add_executable(samplePMSSM.x samplePMSSM.cpp)
target_link_libraries(samplePMSSM.x marty grafed csl)
add_executable(sampleQCD.x sampleQCD.cpp)
target_link_libraries(sampleQCD.x marty grafed csl)
add_executable(sampleQED.x sampleQED.cpp)
target_link_libraries(sampleQED.x marty grafed csl)
add_executable(sampleSQED.x sampleSQED.cpp)
target_link_libraries(sampleSQED.x marty grafed csl)
add_executable(sampleScalar.x sampleScalar.cpp)
target_link_libraries(sampleScalar.x marty grafed csl)
