add_executable(gettingStarted.x gettingStarted.cpp)
target_link_libraries(gettingStarted.x marty)
add_executable(sample2HDM.x sample2HDM.cpp)
target_link_libraries(sample2HDM.x marty)
add_executable(sampleElectroWeak.x sampleElectroWeak.cpp)
target_link_libraries(sampleElectroWeak.x marty)
add_executable(samplePMSSM.x samplePMSSM.cpp)
target_link_libraries(samplePMSSM.x marty)
add_executable(sampleQCD.x sampleQCD.cpp)
target_link_libraries(sampleQCD.x marty)
add_executable(sampleQED.x sampleQED.cpp)
target_link_libraries(sampleQED.x marty)
add_executable(sampleSQED.x sampleSQED.cpp)
target_link_libraries(sampleSQED.x marty)
add_executable(sampleScalar.x sampleScalar.cpp)
target_link_libraries(sampleScalar.x marty)
