[metadata]
name = pymarty
version = 0.1
author = Grégoire Uhlrich
description = Python interface to MARTY
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/docbrown1955/marty-public
project_urls =
    Bug Tracker = https://github.com/docbrown1955/marty-public/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src