set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(ALL_SOURCES
    abreviation.cpp
    abreviation.h
    abstract.cpp
    abstract.h
    algo.cpp
    algo.h
    alloc_monitor.cpp
    alloc_monitor.h
    allocator.h
    booleanOperators.cpp
    booleanOperators.h
    buildingBlock.cpp
    buildingBlock.h
    cast.h
    commutation.cpp
    commutation.h
    comparison.cpp
    comparison.h
    conditional.h
    counter.h
    csl.h
    cslcomplex.cpp
    cslcomplex.h
    default_move_cpy.h
    diagonalization.cpp
    diagonalization.h
    dichotomy.h
    element.cpp
    element.h
    enum.cpp
    enum.h
    error.cpp
    error.h
    evaluation.cpp
    evaluation.h
    functional.cpp
    functional.h
    hardComparison.cpp
    hardComparison.h
    hardFactor.cpp
    hardFactor.h
    index.cpp
    index.h
    index_new.cpp
    index_new.h
    indicial.cpp
    indicial.h
    indicialExpander.h
    initSanitizer.h
    interface.cpp
    interface.h
    interface_indicial.cpp
    interface_indicial.h
    libcallable_data.h
    libcomplexop.h
    libcomplexop_hdata.h
    libdiagonalization.h
    libdiagonalization_cppdata.h
    libdiagonalization_hdata.h
    libmakefile_data.h
    librarydependency.h
    libraryevaluator.cpp
    libraryevaluator.h
    libraryfunction.cpp
    libraryfunction.h
    librarygenerator.cpp
    librarygenerator.h
    librarygroup.cpp
    librarygroup.h
    librarytensor.h
    librarytensor_hdata.h
    linear_map.h
    literal.cpp
    literal.h
    lock.cpp
    lock.h
    mathFunctions.cpp
    mathFunctions.h
    memory_pool.h
    multipermutation.cpp
    multipermutation.h
    numerical.cpp
    numerical.h
    numericalEval.cpp
    numericalEval.h
    objectSymmetry.h
    operations.cpp
    operations.h
    operations_monitor.h
    operator.cpp
    operator.h
    options.cpp
    options.h
    parent.cpp
    parent.h
    partialExpand.cpp
    partialExpand.h
    patternMatch.cpp
    patternMatch.h
    progressBar.h
    pseudoIntegral.cpp
    pseudoIntegral.h
    replace.cpp
    replace.h
    scalarFunc.cpp
    scalarFunc.h
    scopedProperty.h
    simplification.cpp
    simplification.h
    sort.cpp
    sort.h
    space.cpp
    space.h
    std_shared_ptr_inheritance.h
    std_vector_implementation.h
    support.cpp
    support.h
    supportParent.cpp
    supportParent.h
    symmetricCounter.h
    symmetry.cpp
    symmetry.h
    tensorField.cpp
    tensorField.h
    timeMonitor.cpp
    timeMonitor.h
    timer.h
    typedef.h
    utils.cpp
    utils.h
    variableParent.cpp
    variableParent.h
    vector.cpp
    vector.h
)

add_library(csl-core OBJECT ${ALL_SOURCES})
set_property(TARGET csl-core PROPERTY POSITION_INDEPENDENT_CODE 1)
