function(ADD_INTEGRATION_TEST NAME)
    set(target ${NAME}.x)
    add_executable(${target} src/${NAME}.cpp)
    SETUP_MARTY_TEST_TARGET(${target})
    SETUP_GTEST_TARGET(${target} integration)
endfunction()

ADD_INTEGRATION_TEST(test_flavor_groups)
ADD_INTEGRATION_TEST(test_specific_gauge_couplings)
ADD_INTEGRATION_TEST(gammaAPI)
